# seda

./: .env.example  .gitignore  LICENSE  MANUAL.md  Makefile  README.md  TECHNICAL.md  pyproject.toml  requirements.txt
dashboard/: app.py  network_viz.py
data/: top_proregime.txt
scripts/: __init__.py  analyze.py  collect.py  migrate_to_turso.py  seed_accounts.py
seda/: __init__.py  config.py  db.py  models.py
seda/analysis/: __init__.py  bot.py  coordination.py  embeddings.py  features.py  nlp.py  stance.py
seda/scraper/: __init__.py  twitter.py
